fix tag links and link contrast

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,7 +110,7 @@ article li {
 }
 
 a {
-  color: #bf615a;
+  color: #BA5850;
 }
 
 /* Custom */
